TJ2-24 fix wrong color replacements

--- a/src/components/Accordion/Accordion.module.scss
+++ b/src/components/Accordion/Accordion.module.scss
@@ -11,7 +11,7 @@
       display: flex;
       justify-content: space-between;
       align-items: center;
-      border-bottom: 1px solid $grey-40;
+      border-bottom: 1px solid $grey-10;
       cursor: pointer;
       padding-right: 36px;
       font-size: 16px;
