--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -29,7 +29,7 @@
     margin-left: 3px;
     width: 1px;
     height: 40px;
-    background-color: $grey-40;
+    background-color: $grey-10;
   }
   .label {
     @include box-shadow;
@@ -88,7 +88,6 @@
       }
     }
     &.active {
-      // background-color: $grey-40;
       svg {
         opacity: 1;
       }
